--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta name="keywords" content="" />
+    <meta name="keywords" content="">
 
 	<!-- Mobile-friendly viewport -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
