Less Reliance on CDN for better offline work.

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
 
-	<!-- Mobile-friendly viewport -->
+	  <!-- Mobile-friendly viewport -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<!-- favicon -->
-		<link rel="shortcut icon" type="image/png" href="">
+	   <!-- favicon -->
+		<link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
 
-	<!-- LIBRARY scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	  <!-- Font-Awsome -->
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
 
-	<!-- LIBRARY stylesheet -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <!-- Bootstrap Core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-	<!-- Web Fonts -->
-	<link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
+    <link rel="stylesheet" href="vendor/normalize.min.css">
 
-	<!-- CUSTOM CSS -->
+  	<!-- Web Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
+  	<!-- CUSTOM CSS -->
     <link rel="stylesheet" href="css/style.css">
 
 	</head>
@@ -37,7 +37,20 @@
 
 
 
-	<!-- CUSTOM JS -->
-	<script src = "js/scripts.js"></script>
+
+
+
+
+
+
+
+  <!-- jQuery -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- CUSTOM JS -->
+  <script src = "js/scripts.js"></script>
+
+
 	</body>
 </html>
