--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<!-- meta content -->
 	 	<meta charset="utf-8">
 	 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <!--  site information -->
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keywords" content="">
@@ -19,10 +21,14 @@
 	  <!-- Font-Awsome -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
 
-    <!-- Bootstrap Core CSS -->
+     <!-- Normalize CSS - provides better crossbrowser consistency in the default styling of HTML elements. -->
+    <link rel="stylesheet" href="vendor/normalize.min.css">
+
+    <!-- Bootstrap Framework, Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="vendor/normalize.min.css">
+    <!-- Material Design for Bootstrap - CSSFramework -->
+    <link rel="stylesheet" href="vendor/mdb.min.css">
 
   	<!-- Web Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
